--- a/devTeam.html
+++ b/devTeam.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="devTeam.css">
     <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="footer.css" />
 </head>
 <body>
     <header class="topnav-wrapper">
