added a link to the header file

--- a/header.html
+++ b/header.html
@@ -1,5 +1,8 @@
-<!--In head : 
+<!--In head: 
     <link rel="stylesheet" href="./header.css" />
+    + loading a burger menu icon for small screens:
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     At the END of the body, just before the </body> closing tag : 
     <script type="text/javascript" src="header.js"></script>
 -->
