--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="utf-8" />
     <title>Titre de la page</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
-  <header></header>
+
   <body>
+    <header class="topnav-wrapper">
+      <div class="topnav">
+        <!--Our main title, always links to the index/home page-->
+        <h1 class="active"><a href="#">HighFiveMemo</a></h1>
+        <!--h1 for SEO-->
+
+        <!-- Navigation links (hidden by default on mobile view, only seen when clicking on the burger menu -->
+        <div id="myLinks">
+          <a href="#scoreboard">Scores</a>
+          <a href="#contact">Contact</a>
+          <a href="#credits">Dev Team</a>
+        </div>
+
+        <!-- Burger menu -->
+        <a href="javascript:void(0);" class="icon">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+    </header>
     <main>
       <div class="toggle-bar"></div>
       <section>
@@ -60,5 +82,6 @@ You have cards face down. The aim is to find the even cards within the time limi
         <input type="button" class="play" name="play" value="Let's Play !!" />
       </div>
     </main>
+    <script type="text/javascript" src="header.js"></script>
   </body>
 </html>
