--- a/devTeam-carousel.html
+++ b/devTeam-carousel.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="devTeam.css">
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
     <header class="topnav-wrapper">
@@ -36,63 +37,72 @@
         </h2>
         <ul class="devTeam">
             <li class="card">
-                <picture>
-                    <source srcset="images/alex200.jpg" media="(max-width: 370px)">
-                    <img src="images/alex300.jpg" alt="Image dev 1"/>
-                </picture>
+                <img src="https://via.placeholder.com/200" alt="Image dev 1">
                 <h3>
-                    Matt DAMON<br>
-                    Age - 27<br>
-                    Fun fact - "Lorem ipsum dolor sit amet consectetur adipisicing elit."
+                    Alex BUTEAU<br>
+                    <span class="spanAge">Age - 27</span>
                 </h3>
             </li>
             <li class="card">
-                <picture>
-                    <source srcset="images/christophe200.jpg" media="(max-width: 370px)">
-                    <img src="images/christophe300.jpg" alt="Image dev 2"/>
-                </picture>
+                <img src="https://via.placeholder.com/350" alt="Image dev 2">
                 <h3>
                     Christophe PARENT<br>
-                    Age - 32<br>
-                    Fun fact - "Lorem ipsum dolor sit amet consectetur adipisicing elit."
+                    <span class="spanAge">Age - 32</span>
                 </h3>
             </li>
             <li class="card">
-                <picture>
-                    <source srcset="images/guillem200.jpg" media="(max-width: 370px)">
-                    <img src="images/guillem300.jpg" alt="Image dev 3"/>
-                </picture>
+                <img src="https://via.placeholder.com/200" alt="Image dev 3">
                 <h3>
                     Guillem DARDILL<br>
-                    Age - 32<br>
-                    Fun Fact - "Lorem ipsum dolor sit amet consectetur adipisicing elit."
+                    <span class="spanAge">Age - 32</span>
                 </h3>
             </li>
             <li class="card">
-                <picture>
-                    <source srcset="images/brieuc200.jpg" media="(max-width: 370px)">
-                    <img src="images/brieuc300.jpg" alt="Image dev 4"/>
-                </picture>
+                <img src="https://via.placeholder.com/200" alt="Image dev 4">
                 <h3>
                     Brieux QUERTIER<br>
-                    Age - 28<br>
-                    Fun fact - "Lorem ipsum dolor sit amet consectetur adipisicing elit."
+                    <span class="spanAge">Age - 28</span>
                 </h3>
             </li>
             <li class="card">
-                <picture>
-                    <source srcset="images/julien200.jpg" media="(max-width: 370px)">
-                    <img src="images/julien300.jpg" alt="Image dev 5"/>
-                </picture>
-                <h3>
-                    Julien PELLATTIERO<br>
-                    Age - 28<br>
-                    Fun fact - "Lorem ipsum dolor sit amet consectetur adipisicing elit."
+                <img src="https://via.placeholder.com/200" alt="Image dev 5">
+                <h3>Julien PELLATTIERO<br>
+                    <span class="spanAge">Age - 28</span>
                 </h3>
             </li>
         </ul>
- 
+        <section>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="https://via.placeholder.com/100" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="https://via.placeholder.com/100" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="https://via.placeholder.com/100" alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+        </section>
     </main>
+    <footer>
+        
+    </footer>
 <script type="text/javascript" src="devTeam.js"></script>
 <script type="text/javascript" src="header.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
