--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Titre de la page</title>
-    <link rel="stylesheet" href="projet.css" />
+    <link rel="stylesheet" href="game.css" />
     <script src="script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
