--- a/index.html
+++ b/index.html
@@ -37,44 +37,40 @@
         <input type="text" name="pseudo" />
       </section>
 
-      <hr />
-
       <div class="Rules">
         <label for="rules_games">Rules of the game :</label><br />
         <textarea class="rules">
  
 You have cards face down. The aim is to find the even cards within the time limit. Click on a card to flip it over and find its twin.
 
--If you find the pair, the cards remain face up and you can continue. If you make a mistake, the last 2 cards turned over become hidden again.
+If you find the pair, the cards remain face up and you can continue. If you make a mistake, the last 2 cards turned over become hidden again.
 
--Increase the difficulty if you want to add pairs of cards.
+Increase the difficulty if you want to add pairs of cards.
 
--Your score will be calculated according to the level of difficulty and the time taken.
+Your score will be calculated according to the level of difficulty and the time taken.
         </textarea>
       </div>
 
-      <hr />
-
       <div class="settings">
-        <p>Select a difficulty mode :</p>
+        <p class="settings_title">Select a difficulty mode :</p>
         <br />
         <div>
           <input type="radio" class="easy" name="difficulty" />
-          <label for="easy">: Easy</label>
+          <label for="easy">Easy</label>
         </div>
 
         <br />
 
         <div>
           <input type="radio" class="normal" name="difficulty" />
-          <label for="normal">: Normal</label>
+          <label for="normal">Normal</label>
         </div>
 
         <br />
 
         <div>
           <input type="radio" class="hard" name="difficulty" />
-          <label for="hard">: Hard</label>
+          <label for="hard">Hard</label>
         </div>
       </div>
 
@@ -82,6 +78,6 @@ You have cards face down. The aim is to find the even cards within the time limi
         <input type="button" class="play" name="play" value="Let's Play !!" />
       </div>
     </main>
-    <script type="text/javascript" src="header.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
