suppression d'un sous-dossier Contact

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
             id="mail"
             name="user_mail"
             placeholder="Your email"
+            required="required"
           />
         </div>
 
