selection image dans le dossier et modif titre page

--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Titre de la page</title>
+    <title>Game</title>
     <link rel="stylesheet" href="game.css" />
     <script src="script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,7 +15,7 @@
       <ul>
         <li>
           <a href="" title="exit">
-            <img src="exit.png" alt="exit" />
+            <img src="images/exit.png" alt="exit" />
           </a>
         </li>
       </ul>
