add navigation links

--- a/game.html
+++ b/game.html
@@ -10,11 +10,11 @@
   <body>
     <nav>
       <ul>
-        <li class="navigation"><a href="" title="exit">HighFiveMemo</a></li>
+        <li class="navigation"><a href="index.html" title="exit">HighFiveMemo</a></li>
       </ul>
       <ul>
         <li>
-          <a href="" title="exit">
+          <a href="index.html" title="exit">
             <img src="exit.png" alt="exit" />
           </a>
         </li>
