--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <header class="topnav-wrapper">
       <div class="topnav">
         <!--Our main title, always links to the index/home page-->
-        <h1 class="active"><a href="#">HighFiveMemo</a></h1>
+        <h1 class="active"><a href="index.html">HighFiveMemo</a></h1>
         <!--h1 for SEO-->
 
         <!-- Navigation links (hidden by default on mobile view, only seen when clicking on the burger menu -->
         <div id="myLinks">
-          <a href="#scoreboard">Scores</a>
-          <a href="#contact">Contact</a>
-          <a href="#credits">Dev Team</a>
+          <a href="scoreboard.html">Scores</a>
+          <a href="contact.html">Contact</a>
+          <a href="devTeam.html">Dev Team</a>
         </div>
 
         <!-- Burger menu -->
@@ -75,7 +75,7 @@ Your score will be calculated according to the level of difficulty and the time 
       </div>
 
       <div class="button">
-        <input type="button" class="play" name="play" value="Let's Play !!" />
+        <a href="game.html">Let's Play !!</a>
       </div>
     </main>
     <script type="text/javascript" src="index.js"></script>
