--- a/devTeam.html
+++ b/devTeam.html
@@ -13,15 +13,15 @@
     <header class="topnav-wrapper">
         <div class="topnav">
             <!--Our main title, always links to the index/home page-->
-            <h1 class="active"><a href="#">HighFiveMemo</a></h1>
+            <h1 class="active"><a href="index.html">HighFiveMemo</a></h1>
             <!--h1 for SEO-->
     
             <!-- Navigation links (hidden by default on mobile view, only seen when clicking on the burger menu -->
             <div id="myLinks">
-                <a href="#home">Home</a>
-                <a href="#scoreboard">Scores</a>
-                <a href="#contact">Contact</a>
-                <a href="#credits">Dev Team</a>
+                <a href="index.html">Home</a>
+                <a href="scoreboard.html">Scores</a>
+                <a href="contact.html">Contact</a>
+                <a href="devTeam.html">Dev Team</a>
             </div>
     
             <!-- Burger menu -->
