In index.html : add link to lets play button + change html code. In index.css : add style to lets play button

--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@ Your score will be calculated according to the level of difficulty and the time 
           <label for="hard">Hard</label>
         </div>
       </div>
-
-      <div class="button">
-        <a href="game.html">Let's Play !!</a>
-      </div>
+        <form action= "game.html" class="formLetsPlay">
+          <button type="submit" class="buttonLetsPlay">Let's Play !!</button>
+        </form>
     </main>
     <footer>
       <p class="p-footer">
