ajout lien image exit

--- a/game.html
+++ b/game.html
@@ -10,12 +10,14 @@
   <body>
     <nav>
       <ul>
-        <li class="navigation"><a href="index.html" title="exit">HighFiveMemo</a></li>
+        <li class="navigation">
+          <a href="index.html" title="exit">HighFiveMemo</a>
+        </li>
       </ul>
       <ul>
         <li>
           <a href="index.html" title="exit">
-            <img src="exit.png" alt="exit" />
+            <img src="images/exit.png" alt="exit" />
           </a>
         </li>
       </ul>
