Button changed and I replaced textarea by a paragraph

--- a/index.html
+++ b/index.html
@@ -42,17 +42,16 @@
       <div class="central">
         <div class="Rules">
           <label for="rules_games">Rules of the game :</label><br />
-          <textarea class="rules">
- 
-You have cards face down. The aim is to find the even cards within the time limit. Click on a card to flip it over and find its twin.
-
-If you find the pair, the cards remain face up and you can continue. If you make a mistake, the last 2 cards turned over become hidden again.
-
-Increase the difficulty if you want to add pairs of cards.
-
-Your score will be calculated according to the level of difficulty and the time taken.
-        </textarea
-          >
+          <p class="rules">
+            You have cards face down. The aim is to find the even cards within
+            the time limit. <br /><br />Click on a card to flip it over and find
+            its twin. If you find the pair, the cards remain face up and you can
+            continue. <br />
+            If you make a mistake, the last 2 cards turned over become hidden
+            again. <br /><br />Increase the difficulty if you want to add pairs
+            of cards. Your score will be calculated according to the level of
+            difficulty and the time taken.
+          </p>
         </div>
         <div class="video">
           <iframe
@@ -88,15 +87,17 @@ Your score will be calculated according to the level of difficulty and the time 
           <label for="hard">Hard</label>
         </div>
       </div>
-        <form action= "game.html" class="formLetsPlay">
-          <button type="submit" class="buttonLetsPlay">Let's Play !!</button>
-        </form>
+      <form action="game.html" class="formLetsPlay">
+        <button type="submit" class="button">Let's Play !!</button>
+      </form>
     </main>
     <footer>
       <p class="p-footer">
-      HighFiveMemo by <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website created on Septembre 29, 2020
+        HighFiveMemo by
+        <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website
+        created on Septembre 29, 2020
       </p>
-   </footer>
+    </footer>
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
