--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
       <ul>
         <li>
           <a href="index.html" title="exit">
-            <img src="exit.png" alt="exit" />
+            <img src="images/exit.png" alt="exit" />
           </a>
         </li>
       </ul>
