--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         </div>
       </div>
     </main>
+    <div class="button"><a href="#game">Let's Play !!</a></div>
     <footer>
       <p class="p-footer">
         HighFiveMemo by
