first version of card creation

--- a/game.html
+++ b/game.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Game</title>
-    <link rel="stylesheet" href="game.css" />
-    <script src="script.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li class="navigation"><a href="" title="exit">HighFiveMemo</a></li>
-      </ul>
-      <ul>
-        <li>
-          <a href="" title="exit">
-            <img src="images/exit.png" alt="exit" />
-          </a>
-        </li>
-      </ul>
-    </nav>
 
-    <section class="timersection">
-      <div class="timer">2:35</div>
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Game</title>
+  <link rel="stylesheet" href="game.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
 
-    <section class="jeux">
-      <div class="jeuximgfacile">
-        <!-- <div class="card">
+<body>
+  <nav>
+    <ul>
+      <li class="navigation"><a href="" title="exit">HighFiveMemo</a></li>
+    </ul>
+    <ul>
+      <li>
+        <a href="" title="exit">
+          <img src="images/exit.png" alt="exit" />
+        </a>
+      </li>
+    </ul>
+  </nav>
+
+  <section class="timersection">
+    <div class="timer">2:35</div>
+  </section>
+
+  <section class="jeux">
+    <div class="jeuximgfacile card-wrapper">
+      <!-- <div class="card">
           <img src="planete.jpg" alt="planete" />
         </div>
         <div class="card">
@@ -51,11 +52,14 @@
         <div class="card">
           <img src="planete.jpg" alt="planete" />
         </div> -->
-      </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="replaysection">
-      <button class="replay">Replay</button>
-    </section>
-  </body>
+  <section class="replaysection">
+    <button class="replay">Replay</button>
+  </section>
+
+  <script type="text/javascript" src="game.js"></script>
+</body>
+
 </html>
