modif team page html

--- a/devTeam.html
+++ b/devTeam.html
@@ -74,7 +74,7 @@
                     <img src="images/brieuc300.jpg" alt="Image dev 4"/>
                 </picture>
                 <h3>
-                    Brieux QUERTIER<br>
+                    Brieuc QUERTIER<br>
                     Age - 28<br>
                     Fun fact - "Lorem ipsum dolor sit amet consectetur adipisicing elit."
                 </h3>
@@ -91,12 +91,12 @@
                 </h3>
             </li>
         </ul>
-        <footer>
-            <p class="p-footer">
-            HighFiveMemo by <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website created on Septembre 29, 2020
-            </p>
-        </footer>
     </main>
+    <footer>
+        <p class="p-footer">
+        HighFiveMemo by <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website created on Septembre 29, 2020
+        </p>
+    </footer>
 <script type="text/javascript" src="devTeam.js"></script>
 <script type="text/javascript" src="header.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
