add animation in dev team page

--- a/devTeam.html
+++ b/devTeam.html
@@ -38,7 +38,7 @@
             <li class="card">
                 <picture>
                     <source srcset="images/alex200.jpg" media="(max-width: 370px)">
-                    <img src="images/alex300.jpg" alt="Image dev 1"/>
+                    <img src="images/alex300.jpg" alt="Image dev 1" class="img1"/>
                 </picture>
                 <h3>
                     Matt DAMON<br>
@@ -49,7 +49,7 @@
             <li class="card">
                 <picture>
                     <source srcset="images/christophe200.jpg" media="(max-width: 370px)">
-                    <img src="images/christophe300.jpg" alt="Image dev 2"/>
+                    <img src="images/christophe300.jpg" alt="Image dev 2" class="img2"/>
                 </picture>
                 <h3>
                     Christophe PARENT<br>
@@ -60,7 +60,7 @@
             <li class="card">
                 <picture>
                     <source srcset="images/guillem200.jpg" media="(max-width: 370px)">
-                    <img src="images/guillem300.jpg" alt="Image dev 3"/>
+                    <img src="images/guillem300.jpg" alt="Image dev 3" class="img3"/>
                 </picture>
                 <h3>
                     Guillem DARDILL<br>
@@ -71,7 +71,7 @@
             <li class="card">
                 <picture>
                     <source srcset="images/brieuc200.jpg" media="(max-width: 370px)">
-                    <img src="images/brieuc300.jpg" alt="Image dev 4"/>
+                    <img src="images/brieuc300.jpg" alt="Image dev 4" class="img4"/>
                 </picture>
                 <h3>
                     Brieuc QUERTIER<br>
@@ -82,7 +82,7 @@
             <li class="card">
                 <picture>
                     <source srcset="images/julien200.jpg" media="(max-width: 370px)">
-                    <img src="images/julien300.jpg" alt="Image dev 5"/>
+                    <img src="images/julien300.jpg" alt="Image dev 5" class="img5"/>
                 </picture>
                 <h3>
                     Julien PELLATTIERO<br>
