ajout du js en test avec les image html

--- a/game.html
+++ b/game.html
@@ -59,6 +59,6 @@
     <section class="replaysection">
       <button class="replay">Replay</button>
     </section>
-    <script src="script.js"></script>
+    <script src="shuflletest.js"></script>
   </body>
 </html>
