add animation css in dev team page

--- a/devTeam.html
+++ b/devTeam.html
@@ -35,7 +35,7 @@
             Team High Five
         </h2>
         <ul class="devTeam">
-            <li class="card">
+            <li class="card" class="card1">
                 <picture>
                     <source srcset="images/alex200.jpg" media="(max-width: 370px)">
                     <img src="images/alex300.jpg" alt="Image dev 1" class="img1"/>
@@ -46,7 +46,7 @@
                     Fun fact - "Lorem ipsum dolor sit amet consectetur adipisicing elit."
                 </h3>
             </li>
-            <li class="card">
+            <li class="card" class="card2">
                 <picture>
                     <source srcset="images/christophe200.jpg" media="(max-width: 370px)">
                     <img src="images/christophe300.jpg" alt="Image dev 2" class="img2"/>
@@ -57,7 +57,7 @@
                     Fun fact - "Lorem ipsum dolor sit amet consectetur adipisicing elit."
                 </h3>
             </li>
-            <li class="card">
+            <li class="card" class="card3">
                 <picture>
                     <source srcset="images/guillem200.jpg" media="(max-width: 370px)">
                     <img src="images/guillem300.jpg" alt="Image dev 3" class="img3"/>
@@ -68,7 +68,7 @@
                     Fun Fact - "Lorem ipsum dolor sit amet consectetur adipisicing elit."
                 </h3>
             </li>
-            <li class="card">
+            <li class="card" class="card4">
                 <picture>
                     <source srcset="images/brieuc200.jpg" media="(max-width: 370px)">
                     <img src="images/brieuc300.jpg" alt="Image dev 4" class="img4"/>
@@ -79,7 +79,7 @@
                     Fun fact - "Lorem ipsum dolor sit amet consectetur adipisicing elit."
                 </h3>
             </li>
-            <li class="card">
+            <li class="card" class="card5">
                 <picture>
                     <source srcset="images/julien200.jpg" media="(max-width: 370px)">
                     <img src="images/julien300.jpg" alt="Image dev 5" class="img5"/>
