--- a/game.html
+++ b/game.html
@@ -27,11 +27,8 @@
       <div class="timer">2:35</div>
     </section>
 
-    <section class="jeux">
+    <!-- <section class="jeux">
       <div class="jeuximgfacile">
-        <!-- <div class="card">
-          <img src="planete.jpg" alt="planete" />
-        </div>
         <div class="card">
           <img src="planete.jpg" alt="planete" />
         </div>
@@ -52,10 +49,13 @@
         </div>
         <div class="card">
           <img src="planete.jpg" alt="planete" />
-        </div> -->
+        </div>
+        <div class="card">
+          <img src="planete.jpg" alt="planete" />
+        </div>
       </div>
     </section>
-
+  -->
     <section class="replaysection">
       <button class="replay">Replay</button>
     </section>
