small changes to the CSS of the scoreboard page

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -97,6 +97,14 @@
             <div class="button"><a href="#game">Play again!</a></div>
         </div>
     </div>
+
+    <footer>
+        <p class="p-footer">
+            HighFiveMemo by <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website created on September
+            29, 2020
+        </p>
+    </footer>
+
     <script type="text/javascript" src="header.js"></script>
 </body>
 
