changement de toutes les cartes, ajout du js de Guillem, ajout js SHUFFLE, il faut refaire un peu de CSS

--- a/game.html
+++ b/game.html
@@ -27,38 +27,151 @@
       <div class="timer">2:35</div>
     </section>
 
-    <!-- <section class="jeux">
-      <div class="jeuximgfacile">
-        <div class="card">
-          <img src="planete.jpg" alt="planete" />
+    <section class="jeux">
+      <div class="conteneur" id="conteneur">
+        <div class="card-scene">
+          <div class="card" title="type1">
+            <div class="card-face">
+              <img
+                class="card-face-front"              
+                src="https://image.shutterstock.com/image-photo/bright-spring-view-cameo-island-260nw-1048185397.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-face">
+              <img
+                class="card-face-back"
+                src="https://cybersavoir.csdm.qc.ca/bibliotheques/files/2018/11/10_banques_dimages_gratuites_libres_de_droits-300x169.jpg"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
-        <div class="card">
-          <img src="planete.jpg" alt="planete" />
+        <div class="card-scene">
+          <div class="card" title="type2">
+            <div class="card-face">
+              <img
+                class="card-face-front"
+                src="https://cdn.pixabay.com/photo/2015/02/24/15/41/dog-647528__340.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-face">
+              <img
+                class="card-face-back"
+                src="https://cybersavoir.csdm.qc.ca/bibliotheques/files/2018/11/10_banques_dimages_gratuites_libres_de_droits-300x169.jpg"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
-        <div class="card">
-          <img src="planete.jpg" alt="planete" />
+        <div class="card-scene">
+          <div class="card" title="type3">
+            <div class="card-face">
+              <img
+                class="card-face-front"
+                src="https://images.larepubliquedespyrenees.fr/2019/12/28/5e0736b3a43f5e83282803c8/default/1000/ciel-en-feu-a-gurmencon.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-face">
+              <img
+                class="card-face-back"
+                src="https://cybersavoir.csdm.qc.ca/bibliotheques/files/2018/11/10_banques_dimages_gratuites_libres_de_droits-300x169.jpg"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
-        <div class="card">
-          <img src="planete.jpg" alt="planete" />
+        <div class="card-scene">
+          <div class="card" title="type1">
+            <div class="card-face">
+              <img
+                class="card-face-front"              
+                src="https://image.shutterstock.com/image-photo/bright-spring-view-cameo-island-260nw-1048185397.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-face">
+              <img
+                class="card-face-back"
+                src="https://cybersavoir.csdm.qc.ca/bibliotheques/files/2018/11/10_banques_dimages_gratuites_libres_de_droits-300x169.jpg"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
-        <div class="card">
-          <img src="planete.jpg" alt="planete" />
+        <div class="card-scene">
+          <div class="card" title="type2">
+            <div class="card-face">
+              <img
+                class="card-face-front"
+                src="https://cdn.pixabay.com/photo/2015/02/24/15/41/dog-647528__340.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-face">
+              <img
+                class="card-face-back"
+                src="https://cybersavoir.csdm.qc.ca/bibliotheques/files/2018/11/10_banques_dimages_gratuites_libres_de_droits-300x169.jpg"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
-        <div class="card">
-          <img src="planete.jpg" alt="planete" />
+        <div class="card-scene">
+          <div class="card" title="type3">
+            <div class="card-face">
+              <img
+                class="card-face-front"
+                src="https://images.larepubliquedespyrenees.fr/2019/12/28/5e0736b3a43f5e83282803c8/default/1000/ciel-en-feu-a-gurmencon.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-face">
+              <img
+                class="card-face-back"
+                src="https://cybersavoir.csdm.qc.ca/bibliotheques/files/2018/11/10_banques_dimages_gratuites_libres_de_droits-300x169.jpg"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
-        <div class="card">
-          <img src="planete.jpg" alt="planete" />
-        </div>
-        <div class="card">
-          <img src="planete.jpg" alt="planete" />
-        </div>
+  
       </div>
+        </div>
+        </div>
+      <!-- <div class="jeuximgfacile">
+        <div class="card">
+          <img src="planete.jpg" alt="planete" />
+        </div>
+        <div class="card">
+          <img src="planete.jpg" alt="planete" />
+        </div>
+        <div class="card">
+          <img src="planete.jpg" alt="planete" />
+        </div>
+        <div class="card">
+          <img src="planete.jpg" alt="planete" />
+        </div>
+        <div class="card">
+          <img src="planete.jpg" alt="planete" />
+        </div>
+        <div class="card">
+          <img src="planete.jpg" alt="planete" />
+        </div>
+        <div class="card">
+          <img src="planete.jpg" alt="planete" />
+        </div>
+        <div class="card">
+          <img src="planete.jpg" alt="planete" />
+        </div>
+      </div> -->
     </section>
-  -->
+
     <section class="replaysection">
       <button class="replay">Replay</button>
     </section>
-    <script src="shuflletest.js"></script>
+    <script src="shuffletest.js"></script>
   </body>
 </html>
