Modifications of game files and timer files to finish the timer

--- a/game.html
+++ b/game.html
@@ -24,7 +24,7 @@
     </nav>
 
     <section class="timersection">
-      <div id="timer">2:35</div>
+      <div>Time left = <span id="timer"></span></div>
     </section>
 
     <section class="jeux">
