--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="lang">
   <head>
     <meta charset="utf-8" />
     <title>Titre de la page</title>
@@ -20,7 +20,7 @@
 
         <!-- Navigation links (hidden by default on mobile view, only seen when clicking on the burger menu -->
         <div id="myLinks">
-          <a href="index.html">Home</a>
+          <a href="index.html" class="span-1">Home</a>
           <a href="scoreboard.html">Scores</a>
           <a href="contact.html">Contact</a>
           <a href="devTeam.html">Dev Team</a>
@@ -33,24 +33,30 @@
       </div>
     </header>
     <main>
-      <div class="toggle-bar"></div>
+      <div class="line-toggle-bar">
+      <div class="toggle-bar">
+        <div class="toggle-lang">EN</div>
+        <div class="toggle-space"><div class="toggle-button"></div></div>
+        <div class="toggle-lang">FR</div>
+      </div>
+      </div>  
       <section>
-        <label for="pseudo">Enter your pseudo</label> :
+        <label for="pseudo" class="span-2">Enter your pseudo :</label>
         <input type="text" name="pseudo" />
       </section>
 
       <div class="central">
         <div class="Rules">
-          <label for="rules_games">Rules of the game :</label><br />
+          <label for="rules_games" class="span-3">Rules of the game :</label><br />
           <p class="rules">
-            You have cards face down. The aim is to find the even cards within
-            the time limit. <br /><br />Click on a card to flip it over and find
+            <span class="span-4">You have cards face down. The aim is to find the even cards within
+            the time limit. </span><br /><br /><span class="span-5">Click on a card to flip it over and find
             its twin. If you find the pair, the cards remain face up and you can
-            continue. <br />
-            If you make a mistake, the last 2 cards turned over become hidden
-            again. <br /><br />Increase the difficulty if you want to add pairs
+            continue. </span><br />
+            <span class="span-6">If you make a mistake, the last 2 cards turned over become hidden
+            again. </span><br /><br /><span class="span-7">Increase the difficulty if you want to add pairs
             of cards. Your score will be calculated according to the level of
-            difficulty and the time taken.
+            difficulty and the time taken.</span>
           </p>
         </div>
         <div class="video">
@@ -66,11 +72,11 @@
       </div>
 
       <div class="settings">
-        <p class="settings_title">Select a difficulty mode :</p>
+        <p class="settings_title"><span class="span-8">Select a difficulty mode :</span></p>
         <br />
         <div>
           <input type="radio" class="easy" name="difficulty" />
-          <label for="easy">Easy</label>
+          <label for="easy" class="span-9">Easy</label>
         </div>
 
         <br />
@@ -84,16 +90,16 @@
 
         <div>
           <input type="radio" class="hard" name="difficulty" />
-          <label for="hard">Hard</label>
+          <label for="hard" class="span-10">Hard</label>
         </div>
       </div>
     </main>
-    <div class="button"><a href="game.html">Let's Play !!</a></div>
+    <div class="button"><a href="game.html" class="span-11">Let's Play !!</a></div>
     <footer>
       <p class="p-footer">
         HighFiveMemo by
-        <a href="devTeam.html" class="aFooter">Team HighFive</a> - Website
-        created on Septembre 29, 2020
+        <a href="devTeam.html" class="aFooter">Team HighFive</a> <span class="span-12"> - Website
+          created on Septembre 29, 2020</span>
       </p>
     </footer>
     <script type="text/javascript" src="index.js"></script>
