--- a/scoreboard.html
+++ b/scoreboard.html
@@ -106,6 +106,7 @@
     </footer>
 
     <script type="text/javascript" src="header.js"></script>
+    <script type="text/javascript" src="scoreboard.js"></script>
 </body>
 
 </html>
