functional first version with random scores

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -47,6 +47,7 @@
                     <div class="ranking">
                         <p class="number1">1</p>
                         <p class="recordText">RECORD</p>
+                        <p class="date">-----</p>
                     </div>
                     <p class="score recordScore">-----</p>
                     <!--Record score-->
