add change to dev team page

--- a/devTeam.html
+++ b/devTeam.html
@@ -76,7 +76,7 @@
                 <h3 class="brieuc">
                     Brieuc QUERTIER<br>
                     Age - 28<br>
-                    <span class="funfact">"I was quite bored as the boss of my company. So I started to develop."</span>
+                    <span class="funfact">"I was quite bored as the boss of my cookie company. So I started to develop."</span>
                 </h3>
             </li>
             <li class="card">
