--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
     </ul>
     <ul>
       <li>
-        <a href="" title="exit">
+        <a href="index.html" title="exit">
           <img src="images/exit.png" alt="exit" />
         </a>
       </li>
