--- a/game.html
+++ b/game.html
@@ -37,7 +37,7 @@
         <div class="content-2">
           <p class="finalMove"></p>
           <p>in <span class="totalTime"></span></p>
-          <button class="allScore">All your score</button>
+          <button class="allScore"><a href="scoreboard.html"></a>All your score</button></a>
         </div>
       </div>
     </div>
@@ -48,7 +48,7 @@
         <a class="close-loose close">×</a>
         <div class="content-1">Boouuh you're a LOOSER 👎👎</div>
         <div class="content-2">
-          <button class="allScore">All your score</button>
+          <button class="allScore"><a href="scoreboard.html">All your score</button></a>
         </div>
       </div>
     </div>
